<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
   >


    <include layout="@layout/common_titlebar"/>

    <EditText
        android:id="@+id/et_phoneNo"
        style="@style/edit_text"
        android:hint="@string/input_phoneno"
        android:paddingLeft="17dp"
        android:drawableLeft="@drawable/icon_person"
        android:drawablePadding="14dp"
        android:inputType="phone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/background" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/et_code"
            style="@style/edit_text"
            android:hint="@string/input_code"
            android:drawableLeft="@drawable/login_code"
            android:paddingLeft="@dimen/margin_16dp"
            android:maxLength="6"
            android:drawablePadding="@dimen/margin_10dp"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/get_code_btn"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:background="@drawable/login_getcode_btn"
            android:textSize="13dp"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/background" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/edit_text"
        android:hint="@string/input_6_15_pwd"
        android:maxLength="15"
        android:drawableLeft="@drawable/login_pwd"
        android:paddingLeft="@dimen/margin_20dp"
        android:drawablePadding="@dimen/margin_12dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal">

        <View
            android:layout_width="15dp"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/me_button"
        android:textSize="@dimen/font_14sp"
        android:textColor="@color/white"
        android:text="@string/confirm_put" />



</LinearLayout>

