<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
   >
    <include layout="@layout/common_titlebar"/>
    <FrameLayout
        android:id="@+id/user_head"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@color/white"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_head"
            android:textSize="@dimen/font_14sp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:textColor="@color/text_color_333"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/margin_16dp"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/font_14sp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:textColor="@color/text_color_333"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_right_arrow_gray"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/margin_16dp"
            />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/background"
        />
    <FrameLayout
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_phoneno"
            android:textSize="@dimen/font_14sp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:textColor="@color/text_color_333"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/iv_bind_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_bind_phoneno"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/margin_16dp"
            />
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123456"
            android:textSize="@dimen/font_14sp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:textColor="@color/text_color_333"
            android:layout_gravity="right|center_vertical"
            android:visibility="invisible"
            />
    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/background"
        />
    <FrameLayout
        android:id="@+id/change_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_changepwd"
            android:textSize="@dimen/font_14sp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:textColor="@color/text_color_333"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_right_arrow_gray"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/margin_16dp"
            />
    </FrameLayout>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_44dp"
        android:text="@string/logout"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:background="@drawable/me_button"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14sp"
        android:layout_marginTop="@dimen/margin_16dp"
        />
</LinearLayout>
